# oxyromon

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.alpine  Dockerfile.archlinux  README.md  build.rs  build.sh  cross.sh  docker.sh  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  sqlx-data.json  svelte.config.js  test.db  test.sh  tsconfig.json
.github/: FUNDING.yml
.sqlx/: query-0055bc6c5601c72a463040d8c1dc79239411363e920080be9ac8b077bb828c65.json  query-01b7b42a05c4eda9333b35f7af8bdb8dddf2be7ea9683d496ad162788c07ddf7.json  query-03bf4c1e60f9425456fc1d1a2fa3f56508f1a69c1a66a4e6dd4028d83e4dd794.json  query-04d399542a5e3767b76fdd855ca805bddbfaf7a8fa3a38df4c8f62e8f3ae1bf1.json  query-0b1ea5a5b61f9db176368b014ecbb4fd5a90f1aad5af2d466066e86fcd74d3d3.json  query-0cf1e903d705704d912476b70a980da875df78ae8b6de1370bafc802259143a1.json  query-0d3a00cedda8f4e17b47a6db3397e7498c8c38cf40027086907b91a599e6bdbd.json  query-0d3a61825430e22e8d6008d4df4be32b86d8392418c66927f26426687b98c80b.json  query-0f14cf5e8d2fab4ef93be721a6994b753cbb5564effc3091ecddaba6b8def6a4.json  query-0ff86fd646cafebe132398b5be88b22131495acd2c3fd42095825bdef12c5108.json  query-101baf51cc9f5b7c62e7cf9613a7adcb1a704a6607a3b416f146e9fa835e6fcd.json  query-10fe686c3d9bc58fa6a9dbda4fe9564144c281577cf9c9a18d98bfc05b336194.json  query-159507facaddc85d01d94dcb41aab488a243f5b084e0d52199f65f5cf2f1f6fb.json  query-159d42af5e3c42bfd2d29ba8e9d87136e7236045a0a004a64619661304e90a71.json  query-1607b9dda6da9070bc3061bbd4fb7d8d32ab8be699656c3f02686014da4ed4d4.json  query-161bd90d8785854349977125a16bd58664908a537f0f89f03fe33f0ee6b23135.json  query-17f260b51d34301c1deda20ac17fd20423e04d070e6c4cde92eaa12a8968e69b.json  query-183c4a4ab0063371bbcd010e322cbc355d76d8500499eaf130c89e2d10d4ab19.json  query-1a636d68599b74c20bb6c85aea54514d35b409eefb55e92ebda4632c2fe6fca0.json  query-1b8a8367d688d60060f96696e3759662704ce9877f2effd71040cc4c632166b4.json  query-1ca304efa02c35483325fdca1858c56ae956764b6d27c2d79d9847bfe6473779.json  query-1cf9be408be624c9e2dcc8eef408e9f38a67be6e9a4a78d072765e15a805553e.json  query-1e17191c3c61160b2cfe4f34ee880d2af5f0412dffa360ce14255ccf387bde6d.json  query-1f290343f29b0edae0917a1f4d2aa76bd834718189345ae2a1378b8454c26d3b.json  query-217db4a45cefc581a724adbf83cd6eab9a9361a5b2cecad8e9e8f94995062aaa.json  query-24b66132d725cb6750b4a70bf0baebe93514df453db2a27f22ae927ab22021d4.json  query-27db81e537d49551442b9dc206ec7d3e11632b456c853562ffdc2923b0716472.json  query-2abd71822aa7c3eb8fae5331556192ddad44fb639568c1c471b9dba30f3b21f8.json  query-2b0000ee6903263789cb951dc5f38f8fe42700d1bc7871235d6ae9394ce8c6bf.json  query-2b92b64dfd0d46087cfa6289b513222cf0b2ee844edb735273b3018b49b030a2.json  query-2c3f7d6a69b5e844a236d9826dee7a2d8fbad9753296e734d2fac6b3d883acd9.json  query-2c685e12fbc304e3373d4b17616c34d9bb888ba332324b3f35791ae076606a80.json  query-2ee7eb6ccb1bb4a3fdcff99f5af9e1c9e5a0f5dc386e2537dafc5769330ef708.json  query-2eefddd54bd8f34e89f44922571fc2d1bb77629c1860da2b647d02bf8e1e995a.json  query-2f5789a193322c7943d3b37d9b99806174932c8075094d972b4b18ffaa24b46a.json  query-32ff0c866dc75770dc9212a05a82fae1315d16410b7f71bee3d59e9879d87343.json  query-367b25c0b3a9820abb27ee60479ccb2272cc3a5af4303fb7ee73973a5d432536.json  query-39a47ac609f5d42061d33608fdfe647f7eff7edba5ae2961a0b57507de253f41.json  query-3a0c278261ef31ef89809d78b5a55d165615ce7dd93c2bc3107d18f9dcc2b823.json  query-3a7a0ad59e72d50353b26e751ead790e4392027c58f8402fb9357416e75a8493.json  (+128 more)
data/: No-Intro_A7800.xml  No-Intro_FDS.xml  No-Intro_LNX.xml  No-Intro_NES.xml
migrations/: 20210323000001_create_systems.sql  20210323000004_create_romfiles.sql  20210331000001_make_settings_key_unique.sql  20210331000002_add_even_more_settings.sql  20210402000001_simplify_discard_settings copy.sql  20210402000002_add_regions_settings.sql  20210404000001_add_url_to_system.sql  20210426170345_add_size_to_romfiles.sql  20210426170451_add_complete_to_games.sql  20210427073212_add_sorting_to_games.sql  20210427073520_add_complete_to_systems.sql  20210427164836_create_systems_and_games_complete_indexes.sql  20211114103012_create_rules.sql  20220102184512_make_md5_optional.sql  20220102211247_make_sha1_optional.sql  20220102213556_add_arcade_to_system.sql  20220102215810_add_comment_to_games.sql  20220103075227_add_merge_name_to_roms.sql  20220103075227_add_parent_id_to_roms.sql  20220103075534_add_bios_to_games.sql  20220104132512_add_merging_to_system.sql  20220104171306_add_bios_to_roms.sql  20220105084202_add_bios_and_bios_id_to_games.sql  20220112115657_create_roms_complete_index.sql  20220209075226_make_crc_optional.sql  20220209075545_create_roms_size_md5_index.sql  20220209075752_add_external_id_to_games.sql  20220213162700_add_jbfolder_to_games.sql  20220214132322_add_hash_algorithm_setting.sql  20220215074115_create_roms_size_sha1_index.sql  20221129164050_add_fk_indices.sql  20221211162600_add_subfolders_settings.sql  20221213174940_add_group_subsystems_setting.sql  20230103125145_add_compression_settings.sql  20230106190403_add_playlist_id_to_games.sql  20230111120437_add_one_region_strict_setting.sql  20230113210925_add_prefer_flags_setting.sql  20230117163801_add_more_prefer_settings.sql  20230117225816_update_prefer_versions_settings.sql  20230517125348_add_languages_setting.sql  (+25 more)
public/: index.html
src/: App.svelte  app.css  app.html  bchunk.rs  benchmark.rs  chdman.rs  check_roms.rs  checksum.rs  cia.rs  common.rs  config.rs  convert_roms.rs  crc32.rs  create_dats.rs  crud.rs  ctrtool.rs  database.rs  dolphin.rs  download_dats.rs  events.js  export_roms.rs  flips.rs  gdidrop.rs  generate_playlists.rs  import_dats.rs  import_irds.rs  import_patches.rs  import_roms.rs  info.rs  isoinfo.rs  main.js  main.rs  maxcso.rs  mimetype.rs  model.rs  mutation.js  mutation.rs  mutations.js  nsz.rs  progress.rs  (+18 more)
test/: Test Game (USA, Europe) (Mixed) (Headered).7z  Test Game (USA, Europe) (Single Track).chd  Test Game (USA, Europe).7z  Test Game (USA, Europe).chd  Test Game (USA, Europe).cue  (+4 more)
(+345 files in other folders)
