[package]
authors = ["Maxime Gauduin <alucryd@archlinux.org>"]
categories = ["command-line-utilities", "games"]
description = "Rusty ROM OrgaNizer"
edition = "2021"
exclude = [".github/", "dist/", "tests/"]
homepage = "https://github.com/alucryd/oxyromon"
keywords = ["cli", "rom", "tool"]
license = "GPL-3.0+"
name = "oxyromon"
readme = "README.md"
repository = "https://github.com/alucryd/oxyromon"
version = "0.20.0-beta"
rust-version = "1.75.0"

[features]
default = ["use-rustls", "enable-asm"]
use-native-tls = ["reqwest/default-tls"]
use-rustls = ["reqwest/rustls-tls"]
enable-asm = ["md-5/asm", "sha1/asm"]
server = ["async-graphql", "async-graphql-axum", "axum", "http-types"]

[dependencies]
async-graphql = { version = "7.0.11", features = [
    "dataloader",
], default-features = false, optional = true }
async-graphql-axum = { version = "7.0.11", optional = true }
axum = { version = "0.7.7", default-features = false, features = [
    "http2",
    "tokio",
    "ws",
], optional = true }
cdfs = { version = "0.2.3", default-features = false }
cfg-if = "1.0.0"
chrono = { version = "0.4.38", default-features = false, features = ["std", "alloc", "now", "clock"] }
clap = "4.5.19"
crc32fast = "1.4.2"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
digest = { version = "0.10.7", features = ["std"] }
dirs = "5.0.1"
dotenvy = "0.15.7"
env_logger = "0.11.5"
flate2 = "1.0.34"
futures = "0.3.31"
http-types = { version = "2.12.0", optional = true }
indexmap = { version = "2.6.0", default-features = false, features = [
    "std",
    "rayon",
] }
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
md-5 = "0.10.6"
num-derive = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.20.2"
phf = { version = "0.11.2", features = ["macros"] }
quick-xml = { version = "0.36.2", features = ["serialize"] }
rayon = "1.10.0"
regex = "1.11.0"
reqwest = { version = "0.12.8", default-features = false }
rust-embed = { version = "8.5.0", features = ["compression"] }
serde = { version = "1.0.210", features = ["derive"] }
sha1 = "0.10.6"
shiratsu-naming = "0.1.7"
simple-error = "0.3.1"
sqlx = { version = "0.8.2", default-features = false, features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
] }
strsim = "0.11.1"
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
] }
vec-drain-where = "1.0.1"
walkdir = "2.5.0"
which = { version = "6.0.3", default-features = false }
zip = { version = "2.2.0", features = ["deflate"], default-features = false }

[dev-dependencies]
serde_json = "1.0.128"
wiremock = "0.6.2"

[[bin]]
name = "oxyromon"
path = "src/main.rs"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
