[package]
authors = ["Maxime Gauduin <alucryd@archlinux.org>"]
categories = ["command-line-utilities", "games"]
description = "Rusty ROM OrgaNizer"
edition = "2021"
exclude = [".github/", "dist/", "tests/"]
homepage = "https://github.com/alucryd/oxyromon"
keywords = ["cli", "rom", "tool"]
license = "GPL-3.0+"
name = "oxyromon"
readme = "README.md"
repository = "https://github.com/alucryd/oxyromon"
version = "0.20.2"
rust-version = "1.81.0"

[features]
default = ["use-rustls", "enable-asm"]
use-native-tls = ["reqwest/default-tls"]
use-rustls = ["reqwest/rustls-tls"]
enable-asm = ["md-5/asm", "sha1/asm"]
server = ["async-graphql", "async-graphql-axum", "axum", "http-types"]

[dependencies]
async-graphql = { version = "7.0.14", features = [
    "dataloader",
], default-features = false, optional = true }
async-graphql-axum = { version = "7.0.14", optional = true }
async-once-cell = "0.5.4"
axum = { version = "0.8.1", default-features = false, features = [
    "http2",
    "tokio",
    "ws",
], optional = true }
cdfs = { git = "https://git.sr.ht/~az1/iso9660-rs", branch = "master", default-features = false }
cfg-if = "1.0.0"
chrono = { version = "0.4.39", default-features = false, features = [
    "std",
    "alloc",
    "now",
    "clock",
] }
clap = "4.5.27"
crc32fast = "1.4.2"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
digest = { version = "0.10.7", features = ["std"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
env_logger = "0.11.6"
flate2 = "1.0.35"
futures = "0.3.31"
http-types = { version = "2.12.0", optional = true }
indexmap = { version = "2.7.1", default-features = false, features = [
    "std",
    "rayon",
] }
indicatif = { version = "0.17.9", features = ["rayon"] }
infer = "0.16.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.25"
md-5 = "0.10.6"
num-derive = "0.4.2"
num-traits = "0.2.19"
phf = { version = "0.11.3", features = ["macros"] }
quick-xml = { version = "0.37.2", features = ["serialize"] }
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false }
rust-embed = { version = "8.5.0", features = ["compression"] }
serde = { version = "1.0.217", features = ["derive"] }
sha1 = "0.10.6"
shiratsu-naming = "0.1.7"
simple-error = "0.3.1"
sqlx = { version = "0.8.3", default-features = false, features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
] }
strsim = "0.11.1"
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.15.0"
tokio = { version = "1.43.0", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
] }
vec-drain-where = "1.0.1"
walkdir = "2.5.0"
which = { version = "7.0.1", default-features = false }
zip = { version = "2.2.2", features = ["deflate"], default-features = false }

[dev-dependencies]
serde_json = "1.0.137"
wiremock = "0.6.2"

[[bin]]
name = "oxyromon"
path = "src/main.rs"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
